--- a/mobile-index.html
+++ b/mobile-index.html
@@ -16,7 +16,7 @@
     <link rel="dns-prefetch" href="//m.360buyimg.com" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="renderer" content="webkit" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1, minimum-scale=1,maximum-scale=1"/>>
     
     <script type="text/javascript" src="//storage.jd.com/jdview-h5/eruda.js"></script>
     <script>
